--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "generator-node",
-  "version": "0.0.5",
-  "description": "A node generator for Yeoman",
+  "name": "generator-node-mocha",
+  "version": "0.0.0",
+  "description": "A node generator for Yeoman with Mocha unit tests",
   "keywords": [
     "yeoman-generator",
     "scaffold",
     "node"
   ],
-  "homepage": "https://github.com/yeoman/generator-node",
-  "bugs": "https://github.com/yeoman/generator-node/issues",
+  "homepage": "https://github.com/MrDHat/generator-node-mocha",
+  "bugs": "https://github.com/MrDHat/generator-node-mocha/issues",
   "author": {
-    "name": "Addy Osmani",
-    "email": "addyosmani@gmail.com",
-    "url": "https://github.com/addyosmani"
+    "name": "Akshay Katyal",
+    "email": "ktyaks@gmail.com",
+    "url": "https://github.com/MrDHat"
   },
   "main": "app/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yeoman/generator-node.git"
+    "url": "https://github.com/MrDHat/generator-node-mocha.git"
   },
   "scripts": {
     "test": "mocha"
